<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_step_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ScrollView
      android:id="@+id/sv_step_detail"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


    <LinearLayout
        android:id="@+id/ll_step_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


      <TextView
          android:id="@+id/tv_error_message"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/white_accent_background"
          android:elevation="3dp"
          android:padding="@dimen/standard_padding"
          android:text="@string/network_error_message"
          android:textColor="#f00"
          android:textSize="@dimen/error_text_size"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

      <FrameLayout
          android:id="@+id/fl_exo_player"
          android:layout_width="match_parent"
          android:layout_height="@dimen/default_exo_player_height"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/pv_exo_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

      </FrameLayout>

      <TextView
          android:id="@+id/tv_short_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginBottom="16dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="@dimen/normal_text_header_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/fl_exo_player"
          tools:text="Step Detail"/>

      <TextView
          android:id="@+id/tv_step_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginBottom="16dp"
          android:textColor="@color/normal_text"
          android:textSize="@dimen/normal_text_size"
          android:lineSpacingMultiplier="@dimen/step_body_line_spacing_multiplier"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_short_description"
          tools:text="These are the instructions for the step"/>

      <!--This is a ghetto placeholder to make sure next step button does not
          overlap any text.

          padding or margin on scroll view did not work, as it just cut out usable screen space
          for the inner content.-->
      <ImageView
          android:id="@+id/iv_button_placeholder"
          android:contentDescription="@string/button_placeholder_content_description"
          android:layout_width="match_parent"
          android:layout_height="@dimen/button_placeholder_height"
          android:background="@android:color/transparent"
          android:visibility="gone"/>

    </LinearLayout>

  </ScrollView>

  <Button
      android:id="@+id/b_next_step"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_height"
      android:layout_marginBottom="16dp"
      android:layout_marginEnd="16dp"
      android:background="@color/colorAccent"
      android:paddingEnd="@dimen/standard_padding"
      android:paddingStart="@dimen/standard_padding"
      android:text="@string/next_step_text"
      android:textColor="@color/button_text"
      android:textSize="@dimen/button_text_size"
      android:visibility="visible"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="parent"
      tools:text="@string/next_step_text"/>

  <!--<Button-->
      <!--android:id="@+id/b_full_screen"-->
      <!--android:layout_width="wrap_content"-->
      <!--android:layout_height="@dimen/button_height"-->
      <!--android:layout_marginStart="16dp"-->
      <!--android:layout_marginTop="16dp"-->
      <!--android:background="@color/colorAccent"-->
      <!--android:paddingEnd="@dimen/standard_padding"-->
      <!--android:paddingStart="@dimen/standard_padding"-->
      <!--android:text="@string/full_screen_text"-->
      <!--android:textColor="@color/button_text"-->
      <!--android:textSize="@dimen/button_text_size"-->
      <!--android:visibility="visible"-->
      <!--app:layout_constraintStart_toEndOf="parent"-->
      <!--app:layout_constraintTop_toTopOf="parent"-->
      <!--tools:text="@string/full_screen_text"/>-->

</android.support.constraint.ConstraintLayout>