<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <TextView
      android:id="@+id/tv_error_message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="@dimen/standard_padding"
      android:text="@string/network_error_message"
      android:textSize="@dimen/error_text_size"
      android:textColor="#f00"
      android:background="@color/white_accent_background"
      android:visibility="gone"
      android:elevation="3dp"/>

  <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_recipe_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/margin_half_size"/>



</FrameLayout>