...
        android:text="@string/steps_header"
        android:textSize="@dimen/header_size"
        android:textColor="@color/colorAccent"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:scrollbars="none"
        android:padding="2dp"/>

...
